--- a/FrontEnd/loginpage.html
+++ b/FrontEnd/loginpage.html
@@ -35,7 +35,7 @@
           <a href="">sign in with google</a>
         </button>
         <p>
-          <a class="forgot" href="">Forgot Password?</a>
+          <a class="forgot" href="./forgotpassword.html">Forgot Password?</a>
           <a class="Help" href="">Help Center</a>
         </p>
       </div>
