--- a/FrontEnd/forgotpassword.html
+++ b/FrontEnd/forgotpassword.html
@@ -17,7 +17,9 @@
           <p class="Email">Enter Email Address</p>
           <input type="email" name="email" id="Email" />
         </form>
-        <button type="send" name="send" id="send">Send</button>
+       <a href="./verification.html">
+          <button type="send" name="send" id="send">Send</button></a
+        >
         <a href="./signuppage.html"><p id="dont">Don’t have an account?</p></a>
         <a href="./loginpage.html"><p id="login">Back to login</p></a>
       </div>
