--- a/FrontEnd/signuppage.html
+++ b/FrontEnd/signuppage.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>signup-page</title>
-    <link rel="stylesheet" href="./loginpage.css" />
+    <link rel="stylesheet" href="loginpage.css" />
   </head>
   <body>
     <header class="code">
-      <img class="code" src="./image/Logo.svg" alt="" />
+      <img class="code" src="Assets/Logo.svg" alt="" />
     </header>
     <div class="Loginpage">
       <div class="left-side">
         <p>“Make your Code Converse easier By just one Click”</p>
-        <img src="./image/video sample.jpg" alt="" />
+        <img src="Assets/video sample.jpg" alt="" />
       </div>
       <div class="right-side">
         <p>Create Your Own Code Conversion Account</p>
@@ -30,16 +30,16 @@
 
         <hr />
         <button class="btn-google">
-          <img src="./image/icons8-google-20.png" />
+          <img src="Assets/icons8-google-20.png" />
           <a href="">sign in with google</a>
         </button>
       </div>
     </div>
 
     <footer id="footers">
-      <img src="./image/x.svg" alt="" />
-      <img src="./image/icons8-instagram.svg" alt="" />
-      <img src="./image/git.svg" alt="" />
+      <img src="Assets/Icons/x.svg" alt="" />
+      <img src="Assets/Icons/icons8-instagram.svg" alt="" />
+      <img src="Assets/Icons/git.svg" alt="" />
       <a class="foot">. Terms of Service</a>
       <a class="foot">. Privacy Policy</a>
       <a class="foot">. Code Convertion</a>
