--- a/FrontEnd/Home.html
+++ b/FrontEnd/Home.html
@@ -5,54 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Conversion Challenge</title>
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        html,
-        body {
-            height: 100%;
-            overflow-x: hidden;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-            position: relative;
-            background-image: url('Assets/bg-image.jpg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-
-        #sidebar {
-            position: fixed;
-            width: 250px;
-            height: 100vh;
-            left: -250px;
-            top: 0;
-            transition: 0.3s;
-            z-index: 1000;
-            padding-top: 60px;
-            overflow-y: auto;
-            overflow-x: hidden; /* Prevent horizontal overflow */
-        }
-
-        main {
-            flex: 1;
-            margin-left: 0;
-            transition: 0.3s;
-            padding-bottom: 60px; /* Prevent footer overlap */
-        }
-
-        .footer {
-            background-color: transparent;
-        }
-
-        .logo {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-        }
-
         .challenge-box {
             background-color: white;
             padding: 20px;
@@ -64,10 +19,10 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity: 0.5;">
             <div class="logo"></div>
-            <a class="navbar-brand" href="#">
-                <img src="Assets/Logo.svg" alt="Logo">
+            <a class="navbar-brand" href="Home.html">
+                <img src="Assets/images/Logo.svg" alt="Logo">
             </a>
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
