--- a/FrontEnd/forgotpassword.html
+++ b/FrontEnd/forgotpassword.html
@@ -13,7 +13,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity: 0.5;">
       <a class="navbar-brand" href="Home.html">
-      <img src="Assets/Logo.svg" alt="Logo">
+      <img src="Assets/images/Logo.svg" alt="Logo">
       </a>
     </nav>
   </header>
