--- a/FrontEnd/forgotpassword.html
+++ b/FrontEnd/forgotpassword.html
@@ -13,28 +13,34 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity: 0.5;">
       <a class="navbar-brand" href="Home.html">
-      <img src="Assets/images/Logo.svg" alt="Logo">
+        <img src="Assets/images/Logo.svg" alt="Logo">
       </a>
     </nav>
   </header>
-  <main class="d-flex flex-column justify-content-center align-items-center text-center" style="height: 100vh;">
-    <div class="w-100 d-flex flex-column align-items-center">
-        <h1 class="mb-4" style="color: white;">Forgot Password</h1> <!-- Now properly centered -->
-        <div class="form-container">
+  <main class="d-flex justify-content-center align-items-center" style="height: 80vh;">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="form-container text-center">
+            <h1>Forgot Password</h1>
+            <br>
             <form>
-                <p>Enter Email Address</p>
-                <input type="email" name="email" id="email" placeholder="Email" required>
-                <button type="submit" name="send" id="send">Send</button>
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email" placeholder="Enter your email" required />
+              <button type="submit" class="btn-sign" style="width: 100px;">Send</button>
             </form>
-            <div class="mt-3">
-                <a href="./signuppage.html">Don’t have an account?</a>
+
+            <div class="mt-2" style="text-align: left;">
+              <a href="./loginpage.html">Already have an account? <span>Sign in</span></a>
             </div>
-            <div class="mt-2">
-                <a href="./loginpage.html">Back to login</a>
+            <div class="mt-2" style="text-align: left;">
+              <a href="#">Help Center</a>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</main>
+  </main>
   <footer class="footer fixed-bottom">
     <div class="container-fluid">
       <div class="d-flex justify-content-end py-3">
