Renamed the Folder Structure and Modify the files

--- a/FrontEnd/Home.html
+++ b/FrontEnd/Home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Conversion Challenge</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .challenge-box {
@@ -74,7 +74,7 @@
                 programming language to another while maintaining functionality, efficiency, and readability.</p>
             <div class="row justify-content-center mt-4">
                 <div class="col-md-4">
-                    <a href="beginner.html" class="text-decoration-none">
+                    <a href="beginner-taskpage.html" class="text-decoration-none">
                         <div class="challenge-box">
                             <h5>BEGINNER</h5>
                             <p>Simple programs, syntax conversion, and basic logic.</p>
@@ -103,7 +103,7 @@
             </div>
         </section>
         <section class="text-right mr-5" style="width: 35%;">
-            <img src="Assets/2989869.jpg" alt="Code Conversion Challenge"
+            <img src="Assets/images/2989869.jpg" alt="Code Conversion Challenge"
                 style="width: 80%; height: 100%; object-fit: contain;">
         </section>
 
