--- a/FrontEnd/beginner-taskpage.html
+++ b/FrontEnd/beginner-taskpage.html
@@ -3,76 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Conversion</title>
-    <style>
-        body {
-            background: url(./image/project\ bg.jpg);
-            color: white;
-            font-family: monospace;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        nav {
-            padding: 10px;
-            font-size: 18px;
-        }
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-        }
-        .level {
-            background: gray;
-            padding: 5px 10px;
-            border-radius: 10px;
-            font-size: 12px;
-        }
-        .container {
-            margin: 50px auto;
-            width: 60%;
-        }
-        .prompt-box {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 15px;
-            border-radius: 10px;
-            display: inline-block;
-        }
-        .code-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-            border: 1px solid white;
-            padding: 20px;
-            border-radius: 10px;
-        }
-        .code-box {
-            width: 50%;
-            padding: 20px;
-            border-right: 1px solid white;
-            text-align: left;
-        }
-        .code-box:last-child {
-            border-right: none;
-        }
-        .dropdown {
-            background: white;
-            color: black;
-            border-radius: 5px;
-            padding: 5px;
-            cursor: pointer;
-            width: 100%;
-        }
-        textarea {
-            width: 100%;
-            height: 150px;
-            background: black;
-            color: white;
-            border: none;
-            padding: 10px;
-            font-family: monospace;
-        }
-    </style>
+    <title>Code Conversion Challenge</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/task.css">
     <script>
         function updateCode() {
             let codeExamples = {
@@ -86,36 +19,101 @@
     </script>
 </head>
 <body>
-    <nav>
-        <a href="./Home.html">Home</a>
-        <a href="./price.html">Pricing</a>
-        <a href="#">Overview</a>
-        <a href="#">Contact</a>
-        <a href="#">Services</a>
-        <span class="level">Beginner</span>
-    </nav>
-    <div class="container">
-        <h1>What do you want to convert</h1>
-        <h3>Analyse, Code, Check</h3>
-        <div class="prompt-box">
-            Write a function to check if the entered integer is odd or even.<br>
-            Return "Odd" if the number is odd and "Even" if it's even.
-        </div>
-        <div class="code-container">
-            <div class="code-box">
-                <select id="language" class="dropdown" onchange="updateCode()">
-                    <option>Select</option>
-                    <option>Python</option>
-                    <option>C++</option>
-                    <option>Java</option>
-                </select>
-                <br>
-                <textarea id="code-display" readonly></textarea>
+    <!-- Header with Navigation -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="Home.html">
+                <img src="Assets/images/Logo.svg" alt="Logo">
+            </a>
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="price.html">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Overview</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Services</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="dropdown dropleft">
+                    <button class="btn btn-primary bg-transparent border-0" type="button" id="dropdownMenuButton"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="Assets/Icons/menu.svg" alt="Menu">
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
+                            Progress <img src="Assets/Icons/caret-fill.svg" alt="Caret">
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">Solved
+                            <img src="Assets/Icons/caret-fill.svg" alt="Caret"></a>
+                    </div>
+                </div>
+                <span class="level">Beginner</span>
             </div>
-            <div class="code-box">
-                <textarea placeholder="Type your code here..."></textarea>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+        <div class="container">
+            <h1>What do you want to convert</h1>
+            <h3>Analyse, Code, Check</h3>
+            <div class="prompt-box">
+                Write a function to check if the entered integer is odd or even.<br>
+                Return "Odd" if the number is odd and "Even" if it's even.
+            </div>
+            <div class="code-container">
+                <div class="code-box">
+                    <select id="language" class="dropdown" onchange="updateCode()">
+                        <option>Select</option>
+                        <option>Python</option>
+                        <option>C++</option>
+                        <option>Java</option>
+                    </select>
+                    <br>
+                    <textarea id="code-display" readonly></textarea>
+                </div>
+                <div class="code-box">
+                    <textarea placeholder="Type your code here..."></textarea>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer fixed-bottom">
+        <div class="container-fluid">
+            <div class="d-flex justify-content-end py-3">
+                <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><img src="Assets/Icons/icons8-instagram.svg" alt="Instagram"></li>
+                    <li class="list-inline-item"><img src="Assets/Icons/x.svg" alt="X"></li>
+                    <li class="list-inline-item"><img src="Assets/Icons/git.svg" alt="GitHub"></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Terms of Service</a></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Privacy Policy</a></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Code Conversion</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
