--- a/FrontEnd/price.html
+++ b/FrontEnd/price.html
@@ -7,7 +7,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background:url(./Assets/bg-image.jpg);
+            background:url(./Assets/images/bg-image.jpg);
             color: white;
             font-family: Arial, sans-serif;
             height: 100vh;
