--- a/FrontEnd/beginner-taskpage.html
+++ b/FrontEnd/beginner-taskpage.html
@@ -6,6 +6,7 @@
     <title>Code Conversion Challenge</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/task.css">
+    <link rel="stylesheet" href="css/main.css">
     <script>
         function updateCode() {
             let codeExamples = {
@@ -21,7 +22,8 @@
 <body>
     <!-- Header with Navigation -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity: 0.5;">
+            <div class="logo"></div>
             <a class="navbar-brand" href="Home.html">
                 <img src="Assets/images/Logo.svg" alt="Logo">
             </a>
@@ -33,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active text-white" aria-current="page" href="Home.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="price.html">Pricing</a>
@@ -63,7 +65,6 @@
                             <img src="Assets/Icons/caret-fill.svg" alt="Caret"></a>
                     </div>
                 </div>
-                <span class="level">Beginner</span>
             </div>
         </nav>
     </header>
@@ -73,13 +74,20 @@
         <div class="container">
             <h1>What do you want to convert</h1>
             <h3>Analyse, Code, Check</h3>
+            <br>  <!-- Added space after "Analyse, Code, Check" -->
             <div class="prompt-box">
                 Write a function to check if the entered integer is odd or even.<br>
                 Return "Odd" if the number is odd and "Even" if it's even.
             </div>
+            <br>
             <div class="code-container">
                 <div class="code-box">
-                    <select id="language" class="dropdown" onchange="updateCode()">
+                    <select id="language" class="dropdown" onchange="updateCode()" style="background: white;
+                    color: black;
+                    border-radius: 5px;
+                    padding: 5px;
+                    cursor: pointer;
+                    width: 100%;">
                         <option>Select</option>
                         <option>Python</option>
                         <option>C++</option>
@@ -90,6 +98,7 @@
                 </div>
                 <div class="code-box">
                     <textarea placeholder="Type your code here..."></textarea>
+                    <button class="btn btn-primary mt-2 float-right">Submit</button> <!-- Submit button added -->
                 </div>
             </div>
         </div>
