--- a/FrontEnd/forgotpassword.html
+++ b/FrontEnd/forgotpassword.html
@@ -21,24 +21,24 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-6">
-          <div class="form-container text-center">
-            <h1>Forgot Password</h1>
-            <br>
-            <form>
-              <label for="email">Email</label>
-              <input type="email" name="email" id="email" placeholder="Enter your email" required />
-              <button type="submit" class="btn-sign" style="width: 100px;">Send</button>
+          <h1 style="color: white; text-align: center; margin-bottom: 2rem;">Forgot Password</h1>
+          <div class="form-container" style="background: transparent;">
+            <form action="verification.html">
+              <label for="email" style="color: white;;">Email</label>
+              <input type="email" name="email" id="email" placeholder="Enter your email" required style="color: white;" />
+              <button type="submit" class="btn-sign" style="width: 100px; margin-bottom: 1rem; margin-top: 1rem;">Send</button>
             </form>
 
-            <div class="mt-2" style="text-align: left;">
-              <a href="./loginpage.html">Already have an account? <span>Sign in</span></a>
+            <div class="mt-2" style="text-align: center;">
+              <a href="./loginpage.html" style="color: white;">Already have an account? <span>Sign in</span></a>
             </div>
-            <div class="mt-2" style="text-align: left;">
-              <a href="#">Help Center</a>
+            <div class="mt-2" style="text-align: center;">
+              <a href="#" style="color: white;">Help Center</a>
             </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </main>
   <footer class="footer fixed-bottom">
