--- a/FrontEnd/verification.html
+++ b/FrontEnd/verification.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>verificationpage-page</title>
-    <link rel="stylesheet" href="./loginpage.css" />
-  </head>
-  <body>
-    <header class="code">
-      <img class="code" src="./image/Logo.svg" alt="" />
-    </header>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>verificationpage-page</title>
+  <link rel="stylesheet" href="css/loginpage.css" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    #code {
+      *, ::after, ::before {
+      box-sizing: content-box !important;
+    }
+    }
+  </style>
+
+</head>
+
+<body>
+  <header >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity: 0.5;">
+      <div class="logo"></div>
+      <a class="navbar-brand" href="Home.html">
+          <img src="Assets/images/Logo.svg" alt="Logo">
+      </a>
+    </nav>
+  </header>
+  <main>
     <div>
       <h1 class="Forgot" style="font-size: 3.5rem">Verification</h1>
       <div>
@@ -21,23 +39,32 @@
             <input type="0123456789" name="number" class="number" />
             <input type="0123456789" name="number" class="number" />
           </p>
-
           <p class="Resend">
-            If you didn't receive a code, <a href="">Resend</a>
+          If you didn't receive a code, <a href="">Resend</a>
           </p>
           <a href="./newpassword.html">
-            <button type="button" name="verfiy" class="otp">Verfiy</button></a
-          >
+            <button type="button" name="verfiy" class="otp">Verfiy</button></a>
         </form>
       </div>
     </div>
-    <!-- <footer class="footer">
-      <img src="./image/x.svg" alt="" />
-      <img src="./image/icons8-instagram.svg" alt="" />
-      <img src="./image/git.svg" alt="" />
-      <a class="foot">. Terms of Service</a>
-      <a class="foot">. Privacy Policy</a>
-      <a class="foot">. Code Convertion</a>
-    </footer> -->
-  </body>
+  </main>
+  <footer class="footer">
+    <div class="container-fluid">
+      <div class="d-flex justify-content-end py-3">
+        <ul class="list-inline mb-0">
+          <li class="list-inline-item"><img src="Assets/Icons/icons8-instagram.svg" alt="Instagram"></li>
+          <li class="list-inline-item"><img src="Assets/Icons/x.svg" alt="X"></li>
+          <li class="list-inline-item"><img src="Assets/Icons/git.svg" alt="GitHub"></li>
+          <li class="list-inline-item"><a class="text-white" href="#">Terms of Service</a></li>
+          <li class="list-inline-item"><a class="text-white" href="#">Privacy Policy</a></li>
+          <li class="list-inline-item"><a class="text-white" href="#">Code Conversion</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+
 </html>
