--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Form</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
+            margin: 0; 
+            padding: 0; 
+            box-sizing: border-box; 
         }
-        body {
-            background: url(Assets/images/bg-image.jpg);
+        main {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -38,24 +37,30 @@
             align-items: center;
             position: relative;
         }
+
         .left img {
             width: 150px;
             transition: transform 0.3s ease-in-out;
         }
+
         .left img:hover {
             transform: scale(1.1) rotate(7deg);
         }
+
         .tilt {
             will-change: transform;
         }
+
         .right {
             flex: 1;
             padding: 20px;
         }
+
         .right h2 {
             margin-bottom: 20px;
             font-size: 22px;
         }
+
         .input-box {
             width: 100%;
             padding: 10px;
@@ -64,6 +69,7 @@
             border-radius: 5px;
             outline: none;
         }
+
         .button {
             width: 100%;
             padding: 10px;
@@ -75,9 +81,11 @@
             cursor: pointer;
             transition: 0.3s;
         }
+
         .button:hover {
             background: rgb(91, 64, 214);
         }
+
         .home-button {
             padding: 10px 20px;
             background: rgb(25, 4, 96);
@@ -89,31 +97,160 @@
             transition: 0.3s;
             text-decoration: none;
         }
+
         .home-button:hover {
             background: rgb(67, 2, 218);
         }
     </style>
 </head>
+
 <body>
-    <div class="container">
-        <div class="left contact100-pic js-tilt tilt" data-tilt>
-            <img src="./Assets/images/msg-contact.png" alt="Envelope Animation">
-        </div>
-        <div class="right">
-            <h2>Get in touch</h2>
-            <input type="text" class="input-box" placeholder="Name">
-            <input type="email" class="input-box" placeholder="Email">
-            <textarea class="input-box" placeholder="Message..."></textarea>
-            <button class="button">Send</button>
-        </div>
-    </div>
-    <a href="./Home.html" class="home-button">Back to Home</a>
-    <script>
-        $(document).ready(function(){
-            $('.js-tilt').tilt({
-                scale: 1.1
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity: 0.5;">
+            <div class="logo"></div>
+            <a class="navbar-brand" href="Home.html">
+                <img src="Assets/images/Logo.svg" alt="Logo">
+            </a>
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="price.html">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Overview</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Services</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="dropdown dropleft">
+                    <button class="btn btn-primary bg-transparent border-0" type="button" id="dropdownMenuButton"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="Assets/Icons/menu.svg" alt="Menu">
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
+                            Progress <img src="Assets/Icons/caret-fill.svg" alt="Caret">
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">Solved
+                            <img src="Assets/Icons/caret-fill.svg" alt="Caret"></a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section class="container">
+            <div class="left contact100-pic js-tilt tilt" data-tilt>
+                <img src="./Assets/images/msg-contact.png" alt="Envelope Animation">
+            </div>
+            <div class="right">
+                <h2>Get in touch</h2>
+                <input type="text" class="input-box" placeholder="Name" style="color: black;">
+                <input type="email" class="input-box" placeholder="Email" style="color: black;">
+                <textarea class="input-box" placeholder="Message..."></textarea>
+                <button class="button">Send</button>
+            </div>
+        </section>
+        <a href="./Home.html" class="home-button">Back to Home</a>
+        <script>
+            $(document).ready(function(){
+                $('.js-tilt').tilt({
+                    scale: 1.1
+                });
             });
+        </script>
+        <aside id="sidebar" class="bg-dark text-white d-flex flex-column" style="height: 100vh;">
+            <div class="p-3">
+                <h5>Code Conversion</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Settings</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Support</a></li>
+                    <div class="dropdown-divider"></div>
+                </ul>
+            </div>
+            <div class="flex-grow-1"></div>
+            <div class="p-3">
+                <ul class="nav flex-column">
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Subscription</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Mohamed</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Sign out</a></li>
+                </ul>
+            </div>
+        </aside>
+
+        <button id="sidebarToggle" class="btn position-fixed text-white"
+            style="left: 10px; bottom: 20px; z-index: 1001; width: 50px; height: 50px;">
+            <img src="Assets/Icons/sidebar.svg" alt="Open" id="openIcon">
+            <img src="Assets/Icons/sidebar.svg" alt="Close" id="closeIcon" style="display: none;">
+        </button>
+    </main>
+
+    <footer class="footer fixed-bottom">
+        <div class="container-fluid">
+            <div class="d-flex justify-content-end py-3">
+                <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><img src="Assets/Icons/icons8-instagram.svg" alt="Instagram"></li>
+                    <li class="list-inline-item"><img src="Assets/Icons/x.svg" alt="X"></li>
+                    <li class="list-inline-item"><img src="Assets/Icons/git.svg" alt="GitHub"></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Terms of Service</a></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Privacy Policy</a></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Code Conversion</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        document.getElementById('sidebarToggle').addEventListener('click', function () {
+            const sidebar = document.getElementById('sidebar');
+            const openIcon = document.getElementById('openIcon');
+            const closeIcon = document.getElementById('closeIcon');
+            const main = document.querySelector('main');
+            const sidebarToggle = document.getElementById('sidebarToggle');
+
+            if (sidebar.style.left === '-250px' || sidebar.style.left === '') {
+                sidebar.style.left = '0';
+                main.style.marginLeft = '250px';
+                openIcon.style.display = 'none';
+                closeIcon.style.display = 'block';
+                sidebarToggle.style.left = '200px';
+                sidebarToggle.style.bottom = "10px";
+            } else {
+                sidebar.style.left = '-250px';
+                main.style.marginLeft = '0';
+                openIcon.style.display = 'block';
+                closeIcon.style.display = 'none';
+                sidebarToggle.style.left = '10px';
+            }
         });
+
+        document.getElementById('closeIcon').style.display = 'none';
     </script>
+    <script>
+        $(document).ready(function() {
+            $(".tilt").tilt();
+        });
+      
+      </script>
 </body>
+
 </html>
